--- a/src/main/resources/assets/vanilla/lang/en_us.json
+++ b/src/main/resources/assets/vanilla/lang/en_us.json
@@ -1,13 +1,14 @@
 {
   "item.vanilla.leadboots": "Lead Boots",
+  "block.vanilla.curruptiongrass": "Curruptiongrass",
   "advancements.welcome.title": "Welcome",
   "biome.vanilla.farland": "Farland",
   "item.vanilla.deisel.desc": "diesel",
   "item.vanilla.leadsword": "Leadsword",
   "item.vanilla.leadhelmet": "Lead Helmet",
   "block.vanilla.glass": "Glass",
-  "entity.vanilla.farlander": "Farlander",
   "item.vanilla.deisel": "Deisel",
+  "entity.vanilla.farlander": "Farlander",
   "block.vanilla.storagetank": "Storage Tank",
   "item.vanilla.leadbody": "Lead Body",
   "item.vanilla.leadingot": "lead ingot",
