--- a/src/main/resources/assets/vanilla/lang/en_us.json
+++ b/src/main/resources/assets/vanilla/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.vanilla.weeb": "Weeb",
   "item.vanilla.farlandsportaligniter": "Farlands Portal Igniter",
   "block.vanilla.reinforcedobi": "Reinforcedobi",
+  "block.vanilla.curruptionmossystone": "Curruptionmossystone",
   "item.vanilla.weeb.desc": "weeb",
   "block.vanilla.leadore": "Leadore",
   "biome.vanilla.snowmega": "Snow Mega",
