--- a/src/main/resources/assets/vanilla/lang/en_us.json
+++ b/src/main/resources/assets/vanilla/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.vanilla.leadboots": "Lead Boots",
+  "block.vanilla.curruptionstone": "Curruptionstone",
   "block.vanilla.curruptiongrass": "Curruptiongrass",
   "advancements.welcome.title": "Welcome",
   "biome.vanilla.farland": "Farland",
