--- a/src/main/resources/assets/vanilla/lang/en_us.json
+++ b/src/main/resources/assets/vanilla/lang/en_us.json
@@ -6,6 +6,7 @@
   "biome.vanilla.farland": "Farland",
   "item.vanilla.deisel.desc": "diesel",
   "item.vanilla.leadsword": "Leadsword",
+  "block.vanilla.currupionlog": "Currupionlog",
   "item.vanilla.leadhelmet": "Lead Helmet",
   "block.vanilla.glass": "Glass",
   "item.vanilla.deisel": "Deisel",
