--- a/src/main/resources/assets/vanilla/lang/en_us.json
+++ b/src/main/resources/assets/vanilla/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.vanilla.leadboots": "Lead Boots",
   "block.vanilla.curruptionstone": "Curruptionstone",
   "block.vanilla.curruptiongrass": "Curruptiongrass",
+  "block.vanilla.currtuptioncactus": "Currtuptioncactus",
   "advancements.welcome.title": "Welcome",
   "biome.vanilla.farland": "Farland",
   "item.vanilla.deisel.desc": "diesel",
@@ -14,6 +15,7 @@
   "block.vanilla.storagetank": "Storage Tank",
   "item.vanilla.leadbody": "Lead Body",
   "item.vanilla.leadingot": "lead ingot",
+  "block.vanilla.curruptionsand": "Curruptionsand",
   "block.vanilla.corrruptdgrass": "Corrruptdgrass",
   "advancements.welcome.descr": "Go to farlands",
   "item.vanilla.weeb": "Weeb",
