--- a/src/main/resources/assets/vanilla/lang/en_us.json
+++ b/src/main/resources/assets/vanilla/lang/en_us.json
@@ -19,6 +19,7 @@
   "block.vanilla.corrruptdgrass": "Corrruptdgrass",
   "advancements.welcome.descr": "Go to farlands",
   "item.vanilla.weeb": "Weeb",
+  "biome.vanilla.fourzerofour": "Four Zero Four",
   "item.vanilla.farlandsportaligniter": "Farlands Portal Igniter",
   "block.vanilla.reinforcedobi": "Reinforcedobi",
   "block.vanilla.curruptionleafs": "Curruptionleafs",
